# apple-main

./: Cargo.toml  PLAN.md  README.md  devenv.nix  devenv.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: runtime_init.rs  unstable_criterion.rs
codesign-run/: Cargo.toml
codesign-run/src/: main.rs
entitlements/: combined.entitlements
examples/: apple_main_test.rs  tokio_main_test.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: dispatch.rs  lib.rs  runtime.rs  test_harness.rs
src/platform/: apple.rs  mod.rs  other.rs
tests/: harness_integration.rs  integration.rs  main_macro.rs  unstable_framework.rs
