[workspace]
members = [".", "macros", "codesign-run"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
dispatch = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
inventory = "0.3"
libtest-mimic = "0.8"

[package]
name = "apple-main"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Seamlessly integrate async Rust (tokio) with Apple's main-thread-bound frameworks"
keywords = ["apple", "macos", "tokio", "virtualization", "async"]
categories = ["asynchronous", "os::macos-apis"]

[features]
default = []
criterion = ["dep:criterion"]

[dependencies]
tokio = { workspace = true }
apple-main-macros = { path = "macros" }
inventory = { workspace = true }
libtest-mimic = { workspace = true }
criterion = { version = "0.5", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = { workspace = true }
core-foundation = "0.10"

[dev-dependencies]
tokio = { workspace = true }

[[test]]
name = "harness_integration"
harness = false
