[package]
name = "apple-main-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Procedural macros for apple-main"

[lib]
proc-macro = true

[features]
default = []
unstable-test-framework = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
